bug fixed for choosing type

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </main>
 
     <section id="choose-type-page" class="page-content hiden">
-        <h1 class="choose-house">Choose Your Type</h1>
+        <h1 class="choose-type">Choose Your Type</h1>
         <div class="overlay">
-            <button class="type-text type fire-color type-selector" onclick="setType ('fire')">Fire</button>
+            <button class="type-text type fire-color type-selector" onclick="setType('fire')">Fire</button>
             <button class="type-text type electric-color type-selector" onclick="setType('electric')">Electric</button>
             <button class="type-text type grass-color type-selector"  onclick="setType('grass')">Grass</button>
             <button class="type-text type water-color type-selector" onclick="setType('water')">Water</button>
