--- a/index.html
+++ b/index.html
@@ -31,34 +31,33 @@
     <section id="choose-type-page" class="page-content hiden">
         <h1 class="choose-type">Choose Your Type</h1>
         <div class="overlay">
-            <button class="type-text type fire-color type-selector" onclick="setType('fire')">Fire</button>
-            <button class="type-text type electric-color type-selector" onclick="setType('electric')">Electric</button>
-            <button class="type-text type grass-color type-selector"  onclick="setType('grass')">Grass</button>
-            <button class="type-text type water-color type-selector" onclick="setType('water')">Water</button>
+            <button class="type-text type fire-color type-selector" onclick="setType('fire')">Gryffindor</button>
+            <button class="type-text type grass-color type-selector"  onclick="setType('grass')">Slytherin</button>
+            <button class="type-text type electric-color type-selector" onclick="setType('electric')">Hufflepuff</button>
+            <button class="type-text type water-color type-selector" onclick="setType('water')">Ravenclaw</button>
         </div>
     </section>
 
     <section id="quiz-page" class="page-content hiden">
         <h1 id="question-text" class="question-text">Question</h1>
-        <div class="overlay answer-overlay" id="answer-overlay">
+        <div class="overlay a-overlay" id="a-overlay">
             <button class="answer-text answer answer-selector" id="answer-one" onclick="checkAnswer('1')">Answer 1</button>
             <button class="answer-text answer answer-selector" id="answer-two" onclick="checkAnswer('2')">Answer 2</button>
             <button class="answer-text answer answer-selector" id="answer-three" onclick="checkAnswer('3')">Answer 3</button>
             <button class="answer-text answer answer-selector" id="answer-four" onclick="checkAnswer('4')">Answer 4</button>
         </div>
         <div class="progress-position">
-            <div id="score">0 / 10</div>
+            <div id="scoring">0 / 10</div>
             <div class="progress-overlay">
                 <progress id="progress-bar" max="10" value="0"></progress>
             </div>
         </div>
     </section>
-
-    <section id="score-page" class="page-content hiden">
+    <section id="js-score-page" class="page-content hiden">
         <h1 class="result-text">Your Result</h1>
         <section>
             <div class="score">
-                <h2 id="scoring"></h2>
+                <h2 id="js-score"></h2>
                 <br>
             </div>
             <div class="quote">
@@ -68,6 +67,7 @@
             </div>
         </section>
     </section>
+
 
     <section id="how-to-play-page" class="page-content hiden">
         <h1 id="how-to-play-text">How To Play</h1>
