add background style for choosing type

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <section id="choose-type-page" class="page-content hiden">
         <h1 class="choose-type">Choose Your Type</h1>
         <div class="overlay">
-            <button class="type-text type fire-color type-selector" onclick="setType('fire')">Gryffindor</button>
-            <button class="type-text type grass-color type-selector"  onclick="setType('grass')">Slytherin</button>
-            <button class="type-text type electric-color type-selector" onclick="setType('electric')">Hufflepuff</button>
-            <button class="type-text type water-color type-selector" onclick="setType('water')">Ravenclaw</button>
+            <button class="type-text type fire-color type-selector" onclick="setType('fire')">Fire</button>
+            <button class="type-text type electric-color type-selector" onclick="setType('electric')">Electric</button>
+            <button class="type-text type grass-color type-selector"  onclick="setType('grass')">Grass</button>
+            <button class="type-text type water-color type-selector" onclick="setType('water')">Water</button>
         </div>
     </section>
 
@@ -87,7 +87,7 @@
 </main>
 
 <footer id="footer" class="copyright hiden">
-    <p><i class="far fa-copyright"></i> Copyright J.K. Rowling<br>& Warner Bros Entertainment Inc.</p>
+    <p><i class="far fa-copyright"></i> ©2023 Pokémon. ©1995 - 2023<br> Nintendo/Creatures Inc./GAME FREAK inc. TM,<br> ®Nintendo</p>
 </footer>
 
     <script src="assets/script/script.js"></script>
