--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <main id="main-area">
-        <section id="welcome-page" class="welcome-page-content" onclick="enterQuiz()">
+        <section id="welcome-page" class="welcome-page-content" onclick="loadQuiz()">
             <div class="welcome-banner">
                 <p id="welcome">
                     Hello ...............
@@ -53,11 +53,11 @@
             </div>
         </div>
     </section>
-    <section id="js-score-page" class="page-content hiden">
+    <section id="score-page" class="page-content hiden">
         <h1 class="result-text">Your Result</h1>
         <section>
             <div class="score">
-                <h2 id="js-score"></h2>
+                <h2 id="final-score"></h2>
                 <br>
             </div>
             <div class="quote">
