add pictures for readme

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
 
 
-    <section id="how-to-play-page" class="page-content hiden">
+    <section id="instruction-page" class="page-content hiden">
         <h1 id="how-to-play-text">How To Play</h1>
         <div id="how-to-play-overlay">
             <div id="how-to-play">
@@ -79,6 +79,7 @@
                     <li class="how-to-play-p">Click the answer you believe is correct.</li>
                     <li class="how-to-play-p">If it's correct, your score beneath will update.</li>
                     <li class="how-to-play-p">If it's incorrect, your score beneath will not update.</li>
+                    <li class ="how-to-play-p">If you get stuck press the home button to restart.</li>
                 </ul>
             </div>
         </div>
