add final readme

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <br>
             </div>
             <div class="quote">
-                <p id="result-quote" class="result-quote">
+                <p id="end-quote" class="result-quote">
                     Quote here
                 </p>
             </div>
